--- a/ahh.html
+++ b/ahh.html
@@ -490,7 +490,7 @@ Another major issue that working women face is <b>workplace harassment</b>.  In 
       <img src="ohhey.jpg" alt="Molly" height="320">
       <h3>Molly Brigham</h3>
       <p class="w3-opacity">Co-Founder</p>
-      <p>As a junior at National Cathedral School, an all girls school, my education often centers around female empowerment and issues regarding sexism. While our school often seems to represent the more privileged aspects of feminism and female discrimination, I want to expand my views and consider feminism as a necessity not simply for rich, white, cis women, but rather all women.</p>
+      <p>As a junior at National Cathedral School, an all girls school, my education often centers around female empowerment and issues regarding sexism. While our school often seems to represent the more privileged aspects of feminism and female discrimination, I want to expand my views and consider feminism as a necessity not simply for rich, white, cis women, but rather all women. In addition, I am a member of the National Cathedral Choir and have sung at the Kennedy Center, the Inaugural Prayer Service, and have toured England cathedrals with my choir. I also love playing piano and am interested in studying Astronomy and Computer Science.</p>
       <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
