--- a/ahh.html
+++ b/ahh.html
@@ -512,7 +512,7 @@ Another major issue that working women face is <b>workplace harassment</b>.  In 
       <img src="20170808_100045.jpg" alt="Madie" height="320">
       <h3>Madie Yuen</h3>
       <p class="w3-opacity">Co-Founder</p>
-      <p>Currently a junior at Winston Churchill High School with an interest in biology and law. I enjoy baking </p>
+      <p>Currently a junior at Winston Churchill High School with an interest in biology and law. In my spare time I’m part of the Mock Trial team, Model UN, cross country team, and play flute. There is a clear gender gap in the STEM field and I’m glad to be a part of Girls Who Code where they strive to teach young girls how to code.</p>
       <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
   </div>
