--- a/ahh.html
+++ b/ahh.html
@@ -487,21 +487,21 @@ Another major issue that working women face is <b>workplace harassment</b>.  In 
 <!--<center><p><b>Dear sexists: stop being dildos. I'd call you dicks, but you're too fake.</b></center></p><br><br>-->
   <div class="w3-row-padding ">
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="ohhey.jpg" alt="Molly" height="320">
+      <img src="ohhey.jpg" alt="Molly" height="320" width="300">
       <h3>Molly Brigham</h3>
       <p class="w3-opacity">Co-Founder</p>
       <p>As a junior at National Cathedral School, an all girls school, my education often centers around female empowerment and issues regarding sexism. While our school often seems to represent the more privileged aspects of feminism and female discrimination, I want to expand my views and consider feminism as a necessity not simply for rich, white, cis women, but rather all women. In addition, I am a member of the National Cathedral Choir and have sung at the Kennedy Center, the Inaugural Prayer Service, and have toured England cathedrals with my choir. I also love playing piano and am interested in studying Astronomy and Computer Science.</p>
       <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="taimap (2).jpeg" alt="Taima" height="320">
+      <img src="taimap (2).jpeg" alt="Taima" height="320" width="300">
       <h3>Taima Crean</h3>
       <p class="w3-opacity">Co-Founder</p>
       <p>I am a current senior at the School Without Walls and an advocate for women in STEM. As the first ever female captain of my robotics team and the co-founder of the Women in STEM club, I am passionate about giving girls the opportunities they need to discover their potentials. I also enjoy coffee and dogs. </p>
      <!-- <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="mad.jpg" alt="Madeleine" height="320">
+      <img src="mad.jpg" alt="Madeleine" height="320" width="300">
       <h3>Madeleine Nations</h3>
       <p class="w3-opacity">Co-Founder</p>
       <p>I am a senior at Western Branch High School passionate about engineering. I want to see more women in engineering and the expansion of programs to get more women into STEM. I was the project manager of a Society of Women Engineers team that engineered a gross-motor-skills toy for a special needs elementary school class. I enjoy travelling and playing field hockey.  
@@ -509,7 +509,7 @@ Another major issue that working women face is <b>workplace harassment</b>.  In 
       <!--<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="20170808_100045.jpg" alt="Madie" height="320">
+      <img src="20170808_100045.jpg" alt="Madie" height="320" width="300">
       <h3>Madie Yuen</h3>
       <p class="w3-opacity">Co-Founder</p>
       <p>Currently a junior at Winston Churchill High School with an interest in biology and law. In my spare time I’m part of the Mock Trial team, Model UN, cross country team, and play flute. There is a clear gender gap in the STEM field and I’m glad to be a part of Girls Who Code where they strive to teach young girls how to code.</p>
